# docs/swagger.json
@@ -133,17 +133,26 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pages"
+                    "API"
                 ],
                 "summary": "Fetch query data.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search query",
+                        "name": "q",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
                     },
-                    "500": {
-                        "description": "error",
+                    "422": {
+                        "description": "Unprocessable Entity",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.ErrorWithMessageAndStatusCode"
                         }
                     }
                 }
@@ -301,6 +310,17 @@
     },
     "definitions": {
         "handlers.AuthResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "statusCode": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handlers.ErrorWithMessageAndStatusCode": {
             "type": "object",
             "properties": {
                 "message": {
